
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;


 int AF_INET ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;

int main(int argc, char *argv[])
{

  int s;
  struct sockaddr_in target;

  if(argc < 2)
    {
      printf("Usage: %s HOST [PORT]\n\n",argv[0]);
      return 0;
    }

        do
   {
     s = socket(AF_INET, SOCK_STREAM, 0);
     target.sin_family = AF_INET;
     target.sin_port = htons(atoi(argv[2]));
     target.sin_addr.s_addr = inet_addr(argv[1]);

     printf("-       connecting...\n");

     if( connect(s,(struct sockaddr*)&target, sizeof(struct sockaddr))<0)
       {
                printf("        connect() error!\n\n");
                exit(-1);
       }

     printf("        connected\n");
     printf("        closing connection\n");
     close(s);
   }
        while(1);
        return 0;
}
